# lisscad

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  tasks.py  trivial_example_model.lissp
doc/: goal.md  op.md
lisscad/: __init__.py  __main__.py  app.py  exc.py  main.py  misc.py  op.py  prelude.lissp  prelude.py  py_to_scad.py  shorthand.py
lisscad/data/: __init__.py  inter.py  other.py  util.py
lisscad/vocab/: __init__.py  base.py  english.py  util.py
scadl/: __init__.py  __main__.py  app.py  main.py  py_to_scad.py  shorthand.py
scadl/data/: inter.py  other.py
test/: conftest.py
test/data/2d_union/input/: 0.lissp
test/data/2d_union/oracle/: kanxe.scad
test/data/background_aliased/input/: 0.lissp
test/data/background_aliased/oracle/: untitled_0_0.scad
test/data/background_unaliased/input/: 0.lissp
test/data/bilateral/input/: 0.lissp
test/data/bilateral/oracle/: x.scad  xy.scad  y.scad
test/data/chirality/input/: 0.lissp
test/data/chirality/oracle/: achiral.scad  chiral.scad  chiral_mirrored.scad
test/data/comment/input/: 0.lissp
test/data/comment/oracle/: untitled_0_0.scad
test/data/cuboid/input/: 0.lissp  plain.lissp  translated.lissp
test/data/cuboid/oracle/: na pluja.scad  pluja.scad
test/data/cuboid_only/input/: 0.lissp
test/data/cuboid_only/oracle/: bliku.scad
test/data/cylinder/input/: 0.lissp
test/data/cylinder/oracle/: untitled_0_0.scad  untitled_0_1.scad
test/data/debug_aliased/input/: 0.lissp
test/data/disable/input/: star.lissp
test/data/disable/oracle/: 2d.scad  3d.scad  unaliased.scad
test/data/empty/input/: 0.lissp
test/data/empty/oracle/: untitled_0_0.scad  untitled_0_1.scad  untitled_0_2.scad
test/data/english/input/: 0.lissp
test/data/english/oracle/: untitled_0_0.scad  untitled_0_1.scad  untitled_0_2.scad  untitled_0_4.scad
test/data/extrude/input/: 0.lissp
test/data/extrude/oracle/: untitled_0_0.scad
test/data/image/: rendercalls.py
test/data/image/input/: 0.lissp
test/data/image/oracle/: pa.scad  re.scad
test/data/import/input/: 0.lissp
test/data/import/oracle/: untitled_0_0.scad
test/data/macro_union/input/: 0.lissp
test/data/macro_union/oracle/: kanxe.scad
test/data/minkowski/input/: 0.lissp
test/data/minkowski/oracle/: untitled_0_0.scad
test/data/mirror/input/: 0.lissp
test/data/mirror/oracle/: untitled_0_0.scad  untitled_0_1.scad
test/data/mod_background/input/: 0.lissp
test/data/mod_background/oracle/: dual_use.scad  untitled_0_0.scad  untitled_1_0.scad
test/data/mod_debug/oracle/: untitled_0_0.scad
test/data/text/: rendercalls.py
test/logic/: __init__.py  test_lissp_to_scad.py  test_op.py
test/logic/lisscad/: __init__.py  test_op.py
(+58 files in other folders)
